[package]
name = "crate_a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate_b = { path = "../crate_b", optional = true }
crate_c = { path = "../crate_c" }

[features]
feat = [ "crate_b", "crate_c/feat" ]
